--- a/Templates/testcalgpa.html
+++ b/Templates/testcalgpa.html
@@ -443,6 +443,7 @@ function checkItemAvailability(itemId) { //check rows availability. prevent from
         
   <!-- footer end -->
 </div>
+<script src="../static/js/main.js"></script>
 <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
       integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
