--- a/static/CSS/Home.css
+++ b/static/CSS/Home.css
@@ -44,6 +44,46 @@ header {
 
 }
 
+.home-content{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--table-back);
+  border-radius: 50px;
+  overflow: hidden;
+  padding: 50px 40px;
+  width: 100%;
+  margin: 0 auto; 
+  margin-bottom: 3rem;
+  text-align: left;
+}
+.home-content .course-row{
+  margin: 1.5rem;
+}
+
+.course-row button{
+  position: relative;
+  display: inline-flex;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 48%;
+  outline: none;
+  border: none;
+  padding: 5px 20px;
+  border-radius: 20px;
+  background-color: var(--secondary-color);
+}
+
+.course-row .select-course{
+  margin-left: 1.5rem;
+  width: 20rem;
+  height: 2.5rem;
+  border: .1rem solid var(--secondary-color);
+  border-radius: 1.5rem;
+  background: var(--btn_back);
+}
+
 
 
 
