--- a/Templates/testcalgpa.html
+++ b/Templates/testcalgpa.html
@@ -184,7 +184,9 @@ function checkItemAvailability(itemId) { //check rows availability. prevent from
             <div class="g-col-6">
 
                    
-                <p name="degree" class="job_explore_btn"><span class="txt">Selected Digree Program :</span> {{ degree[0][0] }}</p>
+                <p name="degree" class="selected_degree"><span class="txt">
+                    Selected Digree Program :</span> {{ degree[0][0] }}
+                </p>
 
             
                 <div class="table-container" >
