signin page created
signin.html,signin.css

2 images added
1 image changed

--- a/Templates/nav.html
+++ b/Templates/nav.html
@@ -37,7 +37,7 @@
             <a href="#">
               <button class="btn btn-secondary" type="button">Sign Up</button>
             </a>
-            <a class="mx-1" href="#">
+            <a class="mx-1" href="/signin">
               <button class="btn btn-outline-primary" type="button">
                 Sign In
               </button>
