signup page added
validation added

--- a/Templates/nav.html
+++ b/Templates/nav.html
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="{{url_for('faq')}}">FAQ</a>
               </li>
             </ul>
-            <a href="#">
+            <a href="/signup">
               <button class="btn btn-secondary" type="button">Sign Up</button>
             </a>
             <a class="mx-1" href="/signin">
