about us page updated
simple design changes

--- a/Templates/aboutus.html
+++ b/Templates/aboutus.html
@@ -24,20 +24,21 @@
     {% block content %}
       <!-- Your code Start here -->
 
-      <main class="load-font">
+    <main class="load-font">
        
-        <font color = "white"><p><h3><b>Group no: </b>AE</h3></p>
-        <p><h3>No of members: 8</h3></p>
-        <p><h3>Purpose: For Python Programming and Group Project Challenge - UGC 22.2</h3></p>
-        <p><h3>This site developed by the Faculty of computing nsbm green University in collaboration with group students.</h3></p><br></font>
-        <div>
+        
+        <div class="space">
             <div class="row-dev">
                 <!---->
+                
                 <div class="card-dev">
+                    <div class="circular-image">
+                        <img src="https://media.licdn.com/dms/image/D5603AQEq0TBemNMj9Q/profile-displayphoto-shrink_200_200/0/1694000301701?e=1710374400&v=beta&t=E0OTs-t49e67F0E7EQsumdzp4fdVALucnLR9VWR99eo" alt="image">
+                    </div>
                   <div class="column-dev">
                          
                       <div>
-                            <h3><p><b>R.A.K.R Ranasinghe</b></p></h3>
+                            <p class="card-heading">R.A.K.R Ranasinghe</p>
                             <ul>
                                 <li>
                                     <p><strong>Backend Developer</strong></p>
@@ -55,10 +56,13 @@
                 <!---->
                 <!---->
                 <div class="card-dev">
+                    <div class="circular-image">
+                        <img src="https://media.licdn.com/dms/image/D5603AQETsvgTJdV_4w/profile-displayphoto-shrink_100_100/0/1701582457155?e=1710374400&v=beta&t=p1Ep-Z_wh8EVZLR1BPzUJ2047G0C1XjgybECpDkLb1Q" alt="image">
+                    </div>
                     <div class="column-dev">
                          
                         <div>
-                            <h3><p><b>T.P.G.P Nanayakkara</b></p></h3>
+                            <p class="card-heading">T.P.G.P Nanayakkara</p>
                             <ul>
                                 <li>
                                   <p><strong>Backend Developer</strong></p>
@@ -76,10 +80,13 @@
                 <!---->
                 <!---->
                 <div class="card-dev">
+                    <div class="circular-image">
+                        <img src="https://media.licdn.com/dms/image/D5603AQHF8YhuaywLcg/profile-displayphoto-shrink_200_200/0/1701538334391?e=1710374400&v=beta&t=okWGhOxXvIv-hYrnJ2IgGDP2GV6Z-b-KeSGSYL_lKyc" alt="image">
+                    </div>
                     <div class="column-dev">
                         
                         <div>
-                            <h3><p><b>B.G.D.M Beligala</b></p></h3>
+                            <p class="card-heading">B.G.D.M Beligala</p>
                             <ul>
                                 <li>
                                   <p><strong>Backend Developer</strong></p>
@@ -100,10 +107,13 @@
             <div class="row-dev">
                 <!---->
                 <div class="card-dev">
+                    <div class="circular-image">
+                        <img src="{{url_for('static', filename='Images/icon-women.png')}}" alt="image">
+                    </div>
                     <div class="column-dev">
                          
                         <div>
-                            <h3><p><b>W.M.V.R Wijethunga</b></p></h3>
+                            <p class="card-heading">W.M.V.R Wijethunga</p>
                             <ul>
                                 <li>
                                   <p><strong>Frontend Developer</strong></p>
@@ -121,10 +131,13 @@
                 <!---->
                 <!---->
                 <div class="card-dev">
+                    <div class="circular-image">
+                        <img src="https://media.licdn.com/dms/image/C4E03AQEdgoF699b67Q/profile-displayphoto-shrink_200_200/0/1659766894463?e=1710374400&v=beta&t=doySJ2TNjuHVqhXBeohPSvYVnNZY68gWlFQ6fXgwCGE" alt="image">
+                    </div>
                     <div class="column-dev">
                         
                         <div>
-                            <h3><p><b>W.H.M.N Jayawardana</b></p></h3>
+                            <p class="card-heading">W.H.M.N Jayawardana</p>
                             <ul>
                                 <li>
                                   <p><strong>Frontend Developer</strong></p>
@@ -142,10 +155,13 @@
                 <!---->
                 <!---->
                 <div class="card-dev">
+                    <div class="circular-image">
+                        <img src="{{url_for('static', filename='Images/icon-women.png')}}" alt="image">
+                    </div>
                     <div class="column-dev">
                          
                         <div>
-                            <h3><p><b>A.M.J.M Adikari</b></p></h3>
+                            <p class="card-heading">A.M.J.M Adikari</p>
                             <ul>
                                 <li>
                                   <p><strong>Database Administrator</strong></p>
@@ -166,10 +182,13 @@
             <div class="row-dev">
                 <!---->
                 <div class="card-dev">
+                    <div class="circular-image">
+                        <img src="{{url_for('static', filename='Images/icon-women.png')}}" alt="image">
+                    </div>
                     <div class="column-dev">
                         
                         <div>
-                            <h3><p><b>W.M.A.J Weerabahu</b></p></h3>
+                            <p class="card-heading">W.M.A.J Weerabahu</p>
                             <ul>
                                 <li>
                                     <p><strong>Q&A and Community Features Developer</strong></p>
@@ -187,10 +206,13 @@
                 <!---->
                 <!---->
                 <div class="card-dev">
+                    <div class="circular-image">
+                        <img src="https://media.licdn.com/dms/image/D4E03AQHnstPYJ7XBmw/profile-displayphoto-shrink_200_200/0/1667008084904?e=1710374400&v=beta&t=3o4u9wJFBoa3wy2dK0hLd_Y9XFq5RZCx9fHl4qvocRg" alt="image">
+                    </div>
                     <div class="column-dev">
                          
                         <div>
-                            <h3><p><b>K.D.R Laksika</b></p></h3>
+                            <p class="card-heading">K.D.R Laksika</p>
                             <ul>
                               <li>
                                   <p><strong>Q&A and Community Features Developer</strong></p>
@@ -208,22 +230,20 @@
                  <!---->
             </div>
             <!--Row-->
-            <div class="row-dev">
-                <!---->
+
+            <div class="description">
                 
+                <img src = "{{url_for('static', filename='Images/R3.jpg')}}" class="img" alt="nsbm green university">
+                <p class="para">We are from NSBM Green University</p>
+          
+                <p class="para"><b>NSBM Green University</b> is the first ever green university in South Asia and sets an example for the whole South Asia by paving the way for environmental sustainability. The university is open for both national and international student community and it has turned a new chapter in Sri Lankan higher education.</p>
+                <p class="para">NSBM Green University is established under the Ministry of Education and it is renowned for its world-class academic offerings. This state-of-the-art university offers nationally and internationally recognized, UGC-approved degree programmes and foreign degree programmes in four faculties: Business, Computing, Engineering, Science, and Postgraduate Studies.</p>
+            
+            </div>
+
+          
         </div>
-      
-          <p><center><font color = "white" size = 7 >We are from NSBM Green University</font></center></p><br>
-          <center><img src = "images/R3.jpg" width="500"></center><br>
-          <p align = "justify"><font color = "white">NSBM Green University is the first ever green university in South Asia and sets an example for the whole South Asia by paving the way for environmental sustainability. The university is open for both national and international student community and it has turned a new chapter in Sri Lankan higher education.
-              NSBM Green University is established under the Ministry of Education and it is renowned for its world-class academic offerings. This state-of-the-art university offers nationally and internationally recognized, UGC-approved degree programmes and foreign degree programmes in four faculties: Business, Computing, Engineering, Science, and Postgraduate Studies.
-              
-              The university is spread over an area of 26 acres and the massive university complex was built with the intention of providing an opportunity for both national and international students to have a fully-fledged education in Sri Lanka. Currently, more than 12,000 students are studying at the university and the highly qualified local and foreign lecturers who teach at the university are committed to preparing these undergraduates to face any challenge the world has to offer. The university’s commitment to excellence in education extends beyond course delivery since the university has created mutually beneficial relationships with the industry to provide students with opportunities to get exposure to the real- world workplaces.
-              
-              Inspired by the vision of making Sri Lanka the best educational hub in Asia,
-              NSBM Green University is dedicated to gifting future leaders to the world with its fully-fledged university</font></p>
   
-              <a href="https://www.facebook.com/nsbm.lk/photos/"><button class="my-button">Explore More</button></a>
     </main>
       
 
