--- a/static/CSS/aboutus.css
+++ b/static/CSS/aboutus.css
@@ -1,6 +1,5 @@
+@import url("main.css");
 
-
-    
 .load-font{   
 font-family: Poppins, sans-serif;
 margin-left: 15px;
@@ -61,8 +60,24 @@ justify-content: space-around;
 }
 .description{
     margin: 30px;
-    text-align: center;
+    display: flex;
+    flex-wrap: wrap-reverse;
 }
+.description .image-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.description .image-section img {
+    width: 90%;
+    height: 100%;
+    border-radius: 0.5rem;
+}
+.description .description-section p {
+    text-align: justify;
+    max-width: 100%;
+    margin-top: 3rem;
+  }
 .card-heading{
     font-size: x-large;
     font-weight: bold;
