some design changes/aboutus page
*
social media buttons added

--- a/Templates/aboutus.html
+++ b/Templates/aboutus.html
@@ -51,6 +51,10 @@
                                 </li>
                             </ul>  
                         </div>
+                        <div class="social-align">
+                                <a href="https://www.linkedin.com/in/ravindu-ranasinghe-078a23254/"><img src="{{url_for('static', filename='Images/linkedin.png')}}" alt="linkedin" class="social"></a>
+                                <a href="https://github.com/KumudithaRanasinghe/"><img src="{{url_for('static', filename='Images/github.png')}}" alt="github" class="social"></a>
+                        </div>
                     </div>
                 </div>
                 <!---->
@@ -75,6 +79,10 @@
                               </li>
                             </ul>  
                         </div>
+                        <div class="social-align">
+                            <a href="https://www.linkedin.com/in/pasindu-nanayakkara-94867424b/"><img src="{{url_for('static', filename='Images/linkedin.png')}}" alt="linkedin" class="social"></a>
+                            <a href="#"><img src="{{url_for('static', filename='Images/github.png')}}" alt="github" class="social"></a>
+                    </div>
                     </div>
                 </div>
                 <!---->
@@ -99,12 +107,13 @@
                               </li>
                             </ul>  
                         </div>
+                        <div class="social-align">
+                            <a href="https://www.linkedin.com/in/dushan-madushanka-360252196/"><img src="{{url_for('static', filename='Images/linkedin.png')}}" alt="linkedin" class="social"></a>
+                            <a href="https://github.com/dushan6693"><img src="{{url_for('static', filename='Images/github.png')}}" alt="github" class="social"></a>
+                    </div>
                     </div>
                 </div>
                 <!---->
-            </div>
-            <!--Row-->
-            <div class="row-dev">
                 <!---->
                 <div class="card-dev">
                     <div class="circular-image">
@@ -126,9 +135,18 @@
                               </li>
                             </ul>  
                         </div>
+                        <div class="social-align">
+                            <a href="#"><img src="{{url_for('static', filename='Images/linkedin.png')}}" alt="linkedin" class="social"></a>
+                            <a href="#"><img src="{{url_for('static', filename='Images/github.png')}}" alt="github" class="social"></a>
+                    </div>
                     </div>
                 </div>
                 <!---->
+                
+            </div>
+            <!--Row-->
+            <div class="row-dev">
+                
                 <!---->
                 <div class="card-dev">
                     <div class="circular-image">
@@ -150,13 +168,17 @@
                             </li>
                             </ul>  
                         </div>
+                        <div class="social-align">
+                            <a href="https://www.linkedin.com/in/nipun-jayawardhana-4b8997247/"><img src="{{url_for('static', filename='Images/linkedin.png')}}" alt="linkedin" class="social"></a>
+                            <a href="#"><img src="{{url_for('static', filename='Images/github.png')}}" alt="github" class="social"></a>
+                    </div>
                     </div>
                 </div>
                 <!---->
                 <!---->
                 <div class="card-dev">
                     <div class="circular-image">
-                        <img src="{{url_for('static', filename='Images/icon-women.png')}}" alt="image">
+                        <img src="https://media.licdn.com/dms/image/D5603AQHWVOz8MFOBpg/profile-displayphoto-shrink_800_800/0/1705499343398?e=1711584000&v=beta&t=xpgqfnSLEkqaoREZnXtWdFWnZ-u5icYtjb-FWyN5j70" alt="image">
                     </div>
                     <div class="column-dev">
                          
@@ -174,12 +196,13 @@
                                 </li>
                             </ul>  
                         </div>
+                        <div class="social-align">
+                            <a href="https://www.linkedin.com/in/jayani-adikari-a9aa31291/"><img src="{{url_for('static', filename='Images/linkedin.png')}}" alt="linkedin" class="social"></a>
+                            <a href="#"><img src="{{url_for('static', filename='Images/github.png')}}" alt="github" class="social"></a>
+                    </div>
                     </div>
                 </div>
                 <!---->
-            </div>
-            <!--Row-->
-            <div class="row-dev">
                 <!---->
                 <div class="card-dev">
                     <div class="circular-image">
@@ -201,6 +224,10 @@
                               </li>
                             </ul>  
                         </div>
+                        <div class="social-align">
+                            <a href="#"><img src="{{url_for('static', filename='Images/linkedin.png')}}" alt="linkedin" class="social"></a>
+                            <a href="#"><img src="{{url_for('static', filename='Images/github.png')}}" alt="github" class="social"></a>
+                    </div>
                     </div>
                 </div>
                 <!---->
@@ -225,9 +252,18 @@
                             </li>
                             </ul>  
                         </div>
+                        <div class="social-align">
+                            <a href="https://www.linkedin.com/in/rasil-laksika-kottagoda-749516255/"><img src="{{url_for('static', filename='Images/linkedin.png')}}" alt="linkedin" class="social"></a>
+                            <a href="#"><img src="{{url_for('static', filename='Images/github.png')}}" alt="github" class="social"></a>
+                    </div>
                     </div>
                 </div>
                  <!---->
+            </div>
+            <!--Row-->
+            <div class="row-dev">
+                
+                
             </div>
             <!--Row-->
 
